--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@hono/node-server": "^1.13.2",
+    "bullmq": "^5.31.2",
     "hono": "^4.6.6",
     "kafkajs": "^2.2.4",
     "redis": "^4.7.0"
