--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "@bull-board/hono": "^6.5.3",
     "@hono/node-server": "^1.13.2",
     "axios": "^1.7.9",
     "bullmq": "^5.31.2",
     "hono": "^4.6.6",
     "kafkajs": "^2.2.4",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "sharp": "^0.33.5"
   },
   "type": "module"
 }
